shiny-ui-base, state, app: Export MS2 spectra.
* state.R (encode_ms2_to_line, pack_ms2_w_summ): Functions to pack ms2
data based on selected entries in `summ'.

* app (ms2_spectra_tab_name, ms2_spectra_tab_b): New widgets.

* shiny-ui-base: Added input$ms2_spectra_tab_b observer.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -733,6 +733,11 @@ textInput("summ_name",
           label="Summary table name",
           value="summary.csv")
 actionButton("summ_tab_b", "Save summary table")
+
+textInput("ms2_spectra_tab_name",
+          label="Table of MS2 spectra",
+          value="ms2_spectra_table.csv")
+actionButton("ms2_spectra_tab_b", "Save MS2 spectra table")
 ```
 
 </div> <!-- Control Bar -->
