--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -339,24 +339,267 @@ DT::DTOutput("datatab",width="25%")
 ```
 
 ## Configure, Extract, Prescreen {.tabset}
+
 <div class = "flex-cols"> <!-- confstatus-panes -->
-<div>
+<!-- confstatus-panes-left -->
+<div>					
 ```{r, child='app_config_and_status.Rmd'}
+```
+</div> <!-- confstatus-panes-left -->
+<div>  <!-- confstatus-panes-right -->
+
+#### Control
+
+<div style="display: flex;flex-flow: row wrap;">
+```{r, echo=FALSE}
+actionButton(inputId = "extract_b",
+             label = "Extract")
+```
+
+```{r, echo=FALSE}
+actionButton(inputId = "presc_b",
+             label = "Prescreen")
+```
+</div>
+
+#### Overview
+
+- Has the data been extracted? `r htmlOutput("is_extracted_stat", inline=T)`
+- Has the data been auto-quality checked? `r htmlOutput("is_qa_stat", inline=T)`
+
+##### Extraction
+
+- MS1 coarse: `r htmlOutput("ms1_coarse_stat", inline=T)`
+- MS1 fine: `r htmlOutput("ms1_fine_stat", inline=T)`
+- MS1 eic: `r htmlOutput("ms1_eic_stat", inline=T)`
+- Retention time window: `r htmlOutput("rt_stat", inline=T)`
+
+##### Prescreening
+
+- Intensity Threshold (MS1): `r htmlOutput("ms1_int_thresh_stat", inline=T)`
+- Intensity Threshold (MS2): `r htmlOutput("ms2_int_thresh_stat", inline=T)`
+- Retention time shift: `r htmlOutput("ret_time_shift_tol_stat", inline=T)`
+- Signal-to-noise ratio: `r htmlOutput("s2n_stat", inline=T)`
+
+
+
+</div> <!-- confstatus-panes-right -->
+</div> <!-- confstatus-panes -->
+
+
+<!-- TODO: This should be readded at some point. -->
+<!-- ```{r, child='app_compound_lists_and_sets.Rmd'} -->
+<!-- ``` -->
+
+
+## Results Explorer
+
+
+<div style="display: flex; flex-flow: column nowrap;">
+<div style="display: flex; flex-flow: column; padding-right:1.0em">
+
+### Compound Index
+
+```{r, echo=F}
+selectInput("cindex_group",label="Group",
+            choices=c(NA_character_,
+                      "adduct","tag"),
+            multiple=T,
+            selected=c("adduct","tag"))
+```
+            
+<div style="display: flex; flex-flow: row nowrap">
+```{r, echo=F}
+selectInput("sort1",label="Sort by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="quality")
+selectInput("sort2",label="then by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="mz")
+selectInput("sort3",label="then", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
+selectInput("sort4",label="and finally by", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
+```
+</div> <!-- Arrange -->
+
+<div>
+```{r, echo=F}
+DT::DTOutput("cindex")
+```
+
+</div> <!-- cindex -->
+
+</div> <!-- Compound Explorer Panel -->
+
+### Viewer
+
+<div class="plot-layout"> <!-- Plot Section -->
+<div> 
+```{r, echo=F}
+plotOutput("plot_eic_ms1",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_rt_click",
+           brush = "plot_brush")
 ```
 </div>
 <div>
-Unimplemented
+```{r, echo=F}
+plotOutput("plot_struct")
+```
 </div>
-</div> <!-- confstatus-panes -->
+<div>
+```{r, echo=F}
+plotOutput("plot_eic_ms2",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_rt_click",
+           brush = "plot_brush")
+```
+</div>
+<div> 
 
-<!-- SNIP -->
+#### Tweak Plot Parameters
+
+```{r, echo=F}
+textOutput("plot_hover_out")
+```
+
+#### Retention Time Range
+
+<div style="display:flex; flex-direction: row;"> <!-- RT div -->
+```{r, echo=F}
+numericInput(inputId = "plot_rt_min",
+             label="Start",
+             value=NA_real_,
+             width="30%")
+```
+```{r, echo=F}
+numericInput(inputId = "plot_rt_max",
+             label="End",
+             value=NA_real_,
+             width="30%")
 
 
+```
+</div> <!-- RT div -->
+
+#### Intensity Range (MS1)
+
+<div style="display:flex; flex-direction: row;"> <!-- Intensity div -->
+```{r, echo=F}
+numericInput(inputId = "plot_i_min",
+             label="Start",
+             value=NA_real_,
+             width="30%")
+```
+```{r, echo=F}
+numericInput(inputId = "plot_i_max",
+             label="End",
+             value=NA_real_,
+             width="30%")
 
 
+```
+</div> <!-- Intensity div -->
+
+#### Report
+
+<div style="display: flex-flow: row nowrap"> <!-- Control Bar -->
+```{r, echo=F}
+textInput("single_plot_fname",
+          label="Filename of the single entry plot",
+          value="default.pdf")
+actionButton("plot_save_single",
+             label="Save single entry plot")
+textInput("report_name",
+          label="Report Name",
+          value="report")
+actionButton("make_report_b",
+             label="Create report")
+textInput("summ_name",
+          label="Summary table name",
+          value="summary.csv")
+actionButton("summ_tab_b", "Save summary table")
+
+textInput("ms2_spectra_tab_name",
+          label="Table of MS2 spectra",
+          value="ms2_spectra_table.csv")
+actionButton("ms2_spectra_tab_b", "Save MS2 spectra table")
+```
+
+</div> <!-- Control Bar -->
+
+</div>
+<div>
+```{r, echo=F}
+plotOutput("plot_spec_ms2",
+           hover = hoverOpts(id="plot_hover",
+                             delayType = "throttle",
+                             delay=100),
+           dblclick = "plot_mz_click",
+           brush = brushOpts(id="plot_mz_brush"))
+```
+</div>
+<div></div>
+</div> <!-- Plots -->
 
 
+### Measurement Properties
 
+<div class="measure-prop-sec">
+
+<div class="sel-spec"> <!-- sel-spec -->
+
+#### Select Spectrum
+
+```{r, echo=F}
+selectInput("sel_parent_trace",label="Select parent", choices=character(),size=10L,selectize=F)
+```
+
+```{r, echo=F}
+selectInput("sel_spec",label="Select spectrum", choices=character(),size=10L,selectize=F)
+```
+
+```{r, echo=F}
+actionButton("cmt_changes_b",label="Commit changes")
+```
+
+</div> <!-- sel-spec -->
+
+<div class="measure-props"> <!-- measure-props -->
+
+#### Properties
+
+```{r,echo=F}
+numericInput(inputId="chg_ms1_rt",
+             label="Retention time (MS1)",
+             value=NA_real_)
+numericInput(inputId="chg_ms1_int",
+             label="Intensity (MS1)",
+             value=NA_real_)
+```
+
+```{r,echo=F}
+checkboxGroupInput(inputId="qabox",
+                   label="Quality Control",
+                   choices=QABOX_VALS)
+```
+```{r,echo=F}
+checkboxInput(inputId="chg_ms2sel",
+              label="MS2 Selected",
+              value=F)
+```
+</div> <!-- measure-props -->
+
+<div class="spec-tab"> <!-- spec tab -->
+
+#### Mass Spectrum
+
+```{r, echo=F}
+verbatimTextOutput("print_spec_tab")
+```
+
+</div> <!-- spec tab -->
+
+</div> <!-- measure-prop-sec -->
 
 <!-- ENGINE -->
 
