app: Restructuring Viewer
* app_results_explorer_cindex: New file.

* app_results_explorer_cindex_controls: New file.

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -394,212 +394,17 @@ actionButton(inputId = "presc_b",
 
 ## Results Explorer
 
-
-<div style="display: flex; flex-flow: column nowrap;">
-<div style="display: flex; flex-flow: column; padding-right:1.0em">
-
-### Compound Index
-
-```{r, echo=F}
-selectInput("cindex_group",label="Group",
-            choices=c(NA_character_,
-                      "adduct","tag"),
-            multiple=T,
-            selected=c("adduct","tag"))
+<div class='flex-layers'> <!-- cindex -->
+<div>					  <!-- cindex-cindex -->
+```{r, child='app_results_explorer_cindex.Rmd'}
 ```
-            
-<div style="display: flex; flex-flow: row nowrap">
-```{r, echo=F}
-selectInput("sort1",label="Sort by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="quality")
-selectInput("sort2",label="then by ", choices=shinyscreen:::ARRANGE_CHOICES,width="15%",selected="mz")
-selectInput("sort3",label="then", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
-selectInput("sort4",label="and finally by", choices=shinyscreen:::ARRANGE_CHOICES,width="15%")
+</div>					  <!-- cindex-cindex -->
+<div>					  <!-- cindex-controls -->
+```{r, child='app_results_explorer_cindex_controls.Rmd'}
 ```
-</div> <!-- Arrange -->
+</div>					  <!-- cindex-controls -->
+</div>					  <!-- cindex -->
 
-<div>
-```{r, echo=F}
-DT::DTOutput("cindex")
-```
-
-</div> <!-- cindex -->
-
-</div> <!-- Compound Explorer Panel -->
-
-### Viewer
-
-<div class="plot-layout"> <!-- Plot Section -->
-<div> 
-```{r, echo=F}
-plotOutput("plot_eic_ms1",
-           hover = hoverOpts(id="plot_hover",
-                             delayType = "throttle",
-                             delay=100),
-           dblclick = "plot_rt_click",
-           brush = "plot_brush")
-```
-</div>
-<div>
-```{r, echo=F}
-plotOutput("plot_struct")
-```
-</div>
-<div>
-```{r, echo=F}
-plotOutput("plot_eic_ms2",
-           hover = hoverOpts(id="plot_hover",
-                             delayType = "throttle",
-                             delay=100),
-           dblclick = "plot_rt_click",
-           brush = "plot_brush")
-```
-</div>
-<div> 
-
-#### Tweak Plot Parameters
-
-```{r, echo=F}
-textOutput("plot_hover_out")
-```
-
-#### Retention Time Range
-
-<div style="display:flex; flex-direction: row;"> <!-- RT div -->
-```{r, echo=F}
-numericInput(inputId = "plot_rt_min",
-             label="Start",
-             value=NA_real_,
-             width="30%")
-```
-```{r, echo=F}
-numericInput(inputId = "plot_rt_max",
-             label="End",
-             value=NA_real_,
-             width="30%")
-
-
-```
-</div> <!-- RT div -->
-
-#### Intensity Range (MS1)
-
-<div style="display:flex; flex-direction: row;"> <!-- Intensity div -->
-```{r, echo=F}
-numericInput(inputId = "plot_i_min",
-             label="Start",
-             value=NA_real_,
-             width="30%")
-```
-```{r, echo=F}
-numericInput(inputId = "plot_i_max",
-             label="End",
-             value=NA_real_,
-             width="30%")
-
-
-```
-</div> <!-- Intensity div -->
-
-#### Report
-
-<div style="display: flex-flow: row nowrap"> <!-- Control Bar -->
-```{r, echo=F}
-textInput("single_plot_fname",
-          label="Filename of the single entry plot",
-          value="default.pdf")
-actionButton("plot_save_single",
-             label="Save single entry plot")
-textInput("report_name",
-          label="Report Name",
-          value="report")
-actionButton("make_report_b",
-             label="Create report")
-textInput("summ_name",
-          label="Summary table name",
-          value="summary.csv")
-actionButton("summ_tab_b", "Save summary table")
-
-textInput("ms2_spectra_tab_name",
-          label="Table of MS2 spectra",
-          value="ms2_spectra_table.csv")
-actionButton("ms2_spectra_tab_b", "Save MS2 spectra table")
-```
-
-</div> <!-- Control Bar -->
-
-</div>
-<div>
-```{r, echo=F}
-plotOutput("plot_spec_ms2",
-           hover = hoverOpts(id="plot_hover",
-                             delayType = "throttle",
-                             delay=100),
-           dblclick = "plot_mz_click",
-           brush = brushOpts(id="plot_mz_brush"))
-```
-</div>
-<div></div>
-</div> <!-- Plots -->
-
-
-### Measurement Properties
-
-<div class="measure-prop-sec">
-
-<div class="sel-spec"> <!-- sel-spec -->
-
-#### Select Spectrum
-
-```{r, echo=F}
-selectInput("sel_parent_trace",label="Select parent", choices=character(),size=10L,selectize=F)
-```
-
-```{r, echo=F}
-selectInput("sel_spec",label="Select spectrum", choices=character(),size=10L,selectize=F)
-```
-
-```{r, echo=F}
-actionButton("cmt_changes_b",label="Commit changes")
-```
-
-</div> <!-- sel-spec -->
-
-<div class="measure-props"> <!-- measure-props -->
-
-#### Properties
-
-```{r,echo=F}
-numericInput(inputId="chg_ms1_rt",
-             label="Retention time (MS1)",
-             value=NA_real_)
-numericInput(inputId="chg_ms1_int",
-             label="Intensity (MS1)",
-             value=NA_real_)
-```
-
-```{r,echo=F}
-checkboxGroupInput(inputId="qabox",
-                   label="Quality Control",
-                   choices=QABOX_VALS)
-```
-```{r,echo=F}
-checkboxInput(inputId="chg_ms2sel",
-              label="MS2 Selected",
-              value=F)
-```
-</div> <!-- measure-props -->
-
-<div class="spec-tab"> <!-- spec tab -->
-
-#### Mass Spectrum
-
-```{r, echo=F}
-verbatimTextOutput("print_spec_tab")
-```
-
-</div> <!-- spec tab -->
-
-</div> <!-- measure-prop-sec -->
 
 <!-- ENGINE -->
 
